# card_game_builder

./: .gitignore  Cargo.toml  README.md  cards_against_humanity_uk.yaml  playing_cards.cfg  quattrocento.sty  template.tex
.github/workflows/: update-release.yaml
games/: askhole.yaml  cards_against_humanity.yaml  chameleon.yaml  code_names.yaml  dont_get_got.yaml  fake_artist_goes_to_nyc.yaml  fear_pong.yaml  get_legless.yaml  insider.yaml  most_of_these_people_are_lying.yaml  no_thanks.yaml  paranoia.yaml  red_flags.yaml  so_youre_in_a_hot_air_balloon.txt  so_youre_in_a_hot_air_balloon.yaml  superfight.yaml  template.yaml
quattrocento/: README
quattrocento/enc/: qcntr_3fwis5.enc  qcntr_464xel.enc  qcntr_4btof3.enc  qcntr_564kqe.enc  qcntr_6abmaa.enc  qcntr_arxkdo.enc  qcntr_bwr4r4.enc  qcntr_cpzb4n.enc  qcntr_dn5k7b.enc  qcntr_ezrk6a.enc  qcntr_iyhp72.enc  qcntr_lten7n.enc  qcntr_lzgh2n.enc  qcntr_mamppr.enc  qcntr_mizmmx.enc  qcntr_mntdbg.enc  qcntr_qwkegf.enc  qcntr_rf6b27.enc  qcntr_tldjzh.enc  qcntr_vzn2dc.enc  qcntr_wczi5x.enc  qcntr_xvywtm.enc  qcntr_y54nu7.enc  qcntr_zievlx.enc  qcntr_zq54sp.enc
quattrocento/latex/: LY1Quattro-LF.fd  LY1Quattro-Sup.fd  LY1QuattroSans-LF.fd  LY1QuattroSans-Sup.fd  OT1Quattro-LF.fd  OT1Quattro-Sup.fd  OT1QuattroSans-LF.fd  OT1QuattroSans-Sup.fd  T1Quattro-LF.fd  T1Quattro-Sup.fd  T1QuattroSans-LF.fd  T1QuattroSans-Sup.fd  TS1Quattro-LF.fd  TS1QuattroSans-LF.fd
quattrocento/map/: quattrocento.map
quattrocento/type1/: Quattro-Bold.pfb  (+7 more)
src/: main.rs
tex/: .hodor
text_sources/: chameleon.txt  fake_artist_goes_to_nyc.txt
(+136 files in other folders)
