[package]
name = "card_game_builder"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/beyarkay/card_game_builder"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
